# ultra-sort

./: .gitignore  CMakeLists.txt  LICENSE  README.md  common.h  main.cpp  saxpy_experiment.cpp  sort_experiment.cpp
analysis/: analysis.py  analysis_ipc.py
build-dir/: CMakeCache.txt  Makefile  cmake_install.cmake
metrics/: cycletimer.c
saxpy/: simd_saxpy.cpp  simd_saxpy.h
sort/: simd_sort.cpp  simd_sort.h  simd_sort_avx256.cpp  simd_sort_avx256.h
src/: common.cpp  saxpy_experiment.cpp  sort_experiment.cpp
src/avx256/: merge_util.cpp  simd_sort.cpp  sort_util.cpp  utils.cpp
src/avx512/: merge_util.cpp  simd_sort.cpp  sort_util.cpp  utils.cpp
src/include/: common.cpp  common.h
src/include/avx256/: merge_util.h  simd_sort.h  sort_util.h  utils.h
src/include/avx512/: merge_util.h  simd_sort.h  sort_util.h  utils.h
src/include/metrics/: cycletimer.h
src/include/sort/: simd_sort_avx256.h  simd_sort_avx512.h
src/metrics/: cycletimer.cpp
src/saxpy/: simd_saxpy.cpp
src/sort/: simd_sort_avx256.cpp  simd_sort_avx512.cpp
test/avx256/: basics_test.cpp  merge_util_test.cpp  simd_sort_test.cpp  sort_util_test.cpp  utils_test.cpp
test/avx512/: basics_test.cpp  merge_util_test.cpp  simd_sort_test.cpp  sort_util_test.cpp  utils_test.cpp
test/include/: test_util.h
